samples/_failures_safe/1761127192_6c898d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71e2e222.c: In function ‘main’:
./samples/SAFE/__tmp_71e2e222.c:145:32: error: ‘num’ undeclared (first use in this function)
  145 |     if (choice < 1 || choice > num
      |                                ^~~
./samples/SAFE/__tmp_71e2e222.c:145:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_71e2e222.c:145:35: error: expected ‘)’ at end of input
  145 |     if (choice < 1 || choice > num
      |        ~                          ^
      |                                   )
./samples/SAFE/__tmp_71e2e222.c:145:5: error: expected declaration or statement at end of input
  145 |     if (choice < 1 || choice > num
      |     ^~
